--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "Launcher"
   ],
   "author": "Mark Auger",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/swimauger/minecraft-launcher-api/issues"
   },
